---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-05-12
  Bugfixes:
    - Crash on double confirm.
    - Crash when loading game with UI already open in save.
    - Don't remove icon from netid if the sprite is invalid.   Just ignore it.  It may be a
      temporarily missing mod.
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021-04-25
  Bugfixes:
    - Crash on quick double click.
    - Crash when other mod removed and signals were used as net IDs.
  Changes:
    - Change the changelog headings to the more common plurals.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021-4-8
  Bugfixes:
    - Trap for possible crash when multiple users edit combinators simultaneously.
    - Update icon with higher resolution graphic - thanks kingarthur1991 for the tutorial!
  Features:
    - Added per-user setting to allow always showing the Network ID panel.
    - Added default values to setting tool-tips
  Changes:
    - Set the default value to "upgrade" constant combinator to false.  It can still fast replace,
      but will not auto upgrade from a default upgrade planner.  It serves a different purpose than
      a standard constant combinator.
---------------------------------------------------------------------------------------------------
Version: 0.9.9
Date: 2021-3-8
  Bugfixes:
    - Resolved the misplacement of the text caret when editing values
---------------------------------------------------------------------------------------------------
Version: 0.9.8
Date: 2021-1-30
  Bugfixes:
    - So I fixed the crash if you're starting a new game.  Didn't fix the crash for people that
      already started a new game with 9.5 and now had a broken save.  This should fix ya.