@@ -1,6 +1,6 @@
 {
     "name": "LTN_Combinator_Modernized",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "title": "LTN Combinator Modernized",
     "author": "kryojenik, Dockmeister",
     "homepage": "",
