@@ -23,6 +23,8 @@ depot=Depot
 provider-tip=Enables Providing of items\nUse [color=blue]SHIFT[/color] to enable Providing and Requesting
 requester-tip=Enables Requesting of items\nUse [color=blue]SHIFT[/color] to enable Providing and Requesting
 net-config-tip=Click to encode the network ID\n[color=blue]SHIFT[/color] to configure network labels
+net-description-tip=[color=blue]SHIFT[/color] Click to change description
+net-description-title=Network __1__
 depot-tip=Sets this station as an LTN Depot
 btn-all=All
 btn-none=None
