@@ -1,11 +1,17 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
-Date: 2021-05-12
+Date: 2021-05-14
   Bugfixes:
     - Crash on double confirm.
     - Crash when loading game with UI already open in save.
     - Don't remove icon from netid if the sprite is invalid.   Just ignore it.  It may be a
       temporarily missing mod.
+  Features:
+    - Add arbitrary description text to the individual network IDs.
+    - Will stay in sync with LTN provider / requester threshold defaults if they are changed without
+      a restart.
+  Changes:
+    - Combinator window no longer closes when setting network ID icons.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2021-04-25
